--- a/App.xaml
+++ b/App.xaml
@@ -1,9 +1,8 @@
 ﻿<Application x:Class="InventoryManager.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:views="clr-namespace:InventoryManager.Views"
+             xmlns:viewmodels="clr-namespace:InventoryManager.ViewModels"
              xmlns:local="clr-namespace:InventoryManager"
              StartupUri="MainWindow.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
 </Application>
