--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,12 +1,14 @@
-﻿<Window x:Class="InventoryManager.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:InventoryManager"
-        xmlns:vw="clr-namespace:InventoryManager.Views"
+        xmlns:Views="clr-namespace:InventoryManager.Views"
+        xmlns:ViewModels="clr-namespace:InventoryManager.ViewModels" x:Class="InventoryManager.MainWindow"
         mc:Ignorable="d"
-        Title="Inventory Manager" Height="450" Width="800">
+        Title="Inventory Manager" Height="450" Width="800"
+        x:Name="PrimaryWindow">
     <Window.Background>
         <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
             <LinearGradientBrush.RelativeTransform>
@@ -21,11 +23,20 @@
             <GradientStop Color="#FF6EBDFF"/>
         </LinearGradientBrush>
     </Window.Background>
-    <Window.DataContext>
-        <vw:MainView/>
-    </Window.DataContext>
+
     <Grid>
-        <Label Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="3" Content="Inventory Management System" FontSize="20" FontWeight="Bold" Margin="0" Padding="20,10,0,20"/>
-        <vw:MainView Padding="0,20,0,0" Margin="0"/>
+        <ContentControl Content="{Binding CurrentViewModel}">
+            <ContentControl.Resources>
+                <DataTemplate DataType="{x:Type ViewModels:HomeViewModel}">
+                    <Views:HomeView/>
+                </DataTemplate>
+                <DataTemplate DataType="{x:Type ViewModels:AddProductViewModel}">
+                    <Views:AddProductView/>
+                </DataTemplate>
+                <DataTemplate DataType="{x:Type ViewModels:AddPartViewModel}">
+                    <Views:AddPartView/>
+                </DataTemplate>
+            </ContentControl.Resources>
+        </ContentControl>
     </Grid>
 </Window>
