--- a/Views/HomeView.xaml
+++ b/Views/HomeView.xaml
@@ -1,19 +1,19 @@
-﻿<UserControl x:Class="InventoryManager.Views.MainView"
+﻿<UserControl x:Class="InventoryManager.Views.HomeView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:InventoryManager.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" Foreground="Black">
+             d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="20"></ColumnDefinition>
-            <ColumnDefinition Width="auto"></ColumnDefinition>
-            <ColumnDefinition Width="auto"></ColumnDefinition>
-            <ColumnDefinition Width="auto"></ColumnDefinition>
-            <ColumnDefinition Width="*"></ColumnDefinition>
-            <ColumnDefinition Width="20"></ColumnDefinition>
+            <ColumnDefinition Width="20"/>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="20"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="20"/>
@@ -28,7 +28,7 @@
             <RowDefinition Height="20"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Text="{Binding Path=Products.Count, StringFormat=Products ({0})}"
+        <TextBlock Text="{Binding Products.Count, StringFormat=Products (\{0\})}"
             Grid.Column="1"
             Grid.ColumnSpan="2"
             Grid.Row="1" 
@@ -40,7 +40,8 @@
                 Content="Add Product"
                 Width="75"
                 HorizontalAlignment="Right"
-                Click="btnAddProduct_OnClick"/>
+                Command="{Binding NavigateAddProductCommand}"/>
+
 
         <DataGrid x:Name="dataGridProducts"
                   AutoGenerateColumns="false"
@@ -50,31 +51,31 @@
                   Grid.RowSpan="5"
                   CanUserResizeRows="False"
                   HeadersVisibility="Column"
-                  ItemsSource="{Binding Path=Products}">
+                  ItemsSource="{Binding Products}">
             <DataGrid.Columns>
                 <DataGridTextColumn
                     Header="Product ID"
                     Width="auto"
-                    Binding="{Binding Path=ProductID}"/>
+                    Binding="{Binding ProductID}"/>
 
                 <DataGridTextColumn
                 Header="Product Name"
                 Width="auto"
-                Binding="{Binding Path=Name}"/>
+                Binding="{Binding Name}"/>
 
                 <DataGridTextColumn
                 Header="Price"
                 Width="auto"
-                Binding="{Binding Path=Price}"/>
+                Binding="{Binding Price}"/>
 
                 <DataGridTextColumn
                 Header="Inventory"
                 Width="auto"
-                Binding="{Binding Path=Inventory}"/>
+                Binding="{Binding Inventory}"/>
             </DataGrid.Columns>
         </DataGrid>
 
-        <TextBlock Text="{Binding Path=Parts.Count, StringFormat=Parts ({0})}"
+        <TextBlock Text="{Binding Parts.Count, StringFormat=Parts (\{0\})}"
             Grid.Column="3"
             Grid.ColumnSpan="2"
             Grid.Row="1" 
@@ -85,7 +86,8 @@
                 Grid.Row="1"
                 Content="Add Part"
                 Width="75"
-                HorizontalAlignment="Right"/>
+                HorizontalAlignment="Right"
+                Command="{Binding NavigateAddPartCommand}"/>
 
         <DataGrid x:Name="dataGridParts"
                   AutoGenerateColumns="false"
@@ -97,27 +99,27 @@
                   HeadersVisibility="Column"
                   ScrollViewer.CanContentScroll="True"
                   ScrollViewer.VerticalScrollBarVisibility="Auto"
-                  ItemsSource="{Binding Path=Parts}" Padding="0" Margin="50,0,0,0">
+                  ItemsSource="{Binding Parts}" Padding="0" Margin="50,0,0,0">
             <DataGrid.Columns>
                 <DataGridTextColumn
                     Header="Part ID"
                     Width="auto"
-                    Binding="{Binding Path=PartID}"/>
+                    Binding="{Binding PartID}"/>
 
                 <DataGridTextColumn
                 Header="Part Name"
                 Width="auto"
-                Binding="{Binding Path=Name}"/>
+                Binding="{Binding Name}"/>
 
                 <DataGridTextColumn
                 Header="Price"
                 Width="auto"
-                Binding="{Binding Path=Price}"/>
+                Binding="{Binding Price}"/>
 
                 <DataGridTextColumn
                 Header="Inventory"
                 Width="auto"
-                Binding="{Binding Path=Inventory}"/>
+                Binding="{Binding Inventory}"/>
             </DataGrid.Columns>
         </DataGrid>
 
@@ -126,6 +128,9 @@
                 Grid.Row="7"
                 Width="50"
                 HorizontalAlignment="Right"
-                Content="Close" Margin="0,10,0,0"/>
+                Content="Exit" Margin="0,10,0,0"
+                Click="btnClose_Click"
+                Command="{Binding CloseWindowCommand}"
+                CommandParameter="{Binding ElementName=PrimaryWindow}"/>
     </Grid>
 </UserControl>
