--- a/Views/AddPartView.xaml
+++ b/Views/AddPartView.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:InventoryManager.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="400">
     
     <Grid>
         <Grid.Resources>
@@ -74,76 +74,16 @@
                FontSize="20" FontWeight="Bold" 
                Content="Inventory Manager - Add Part"/>
 
-        <!-- Row 3 -->
-        <TextBlock Text="{Binding Parts.Count, StringFormat=All Candidate Parts (\{0\})}"
-            Grid.Column="1"
-            Grid.Row="3" 
-            FontSize="16"/>
-
         <!-- Row 4 -->
         <StackPanel Orientation="Horizontal"
-                    Grid.Column="1" Grid.Row="4"
-                    Margin="0 5 0 5">
-            
-            <TextBox x:Name="partSearchBox"
-                Width="200" Height="20"
-                Text="{Binding PartSearchBoxContents, Mode=OneWayToSource, UpdateSourceTrigger=PropertyChanged}"/>
-
-            <Button
-                Width="75" Height="20"
-                Margin="10 0 0 0"
-                Content="Search"
-                Command="{Binding SearchPartCommand}"/>
-        </StackPanel>
-        
-        <!-- Row 5 -->
-        <DataGrid x:Name="dataGridAllParts"
-                  AutoGenerateColumns="False"
-                  Grid.Column="1"
-                  ColumnWidth="*"
-                  MinColumnWidth="71"
-                  Grid.Row="5"
-                  Grid.RowSpan="5"
-                  IsReadOnly="True"
-                  CanUserResizeRows="False"
-                  HeadersVisibility="Column"
-                  HorizontalAlignment="Left"
-                  ItemsSource="{Binding Parts}"
-                  SelectionMode="Single"
-                  SelectedItem="{Binding SelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
-            <DataGrid.Columns>
-                <DataGridTextColumn
-                    Header="Part ID"
-                    Width="auto"
-                    Binding="{Binding PartID}"/>
-
-                <DataGridTextColumn
-                    Header="Part Name"
-                    Width="auto"
-                    Binding="{Binding Name}"/>
-
-                <DataGridTextColumn
-                    Header="Price"
-                    Width="auto"
-                    Binding="{Binding Price}"/>
-
-                <DataGridTextColumn
-                    Header="Inventory"
-                    Width="*"
-                    Binding="{Binding Inventory}"/>
-            </DataGrid.Columns>
-        </DataGrid>
-
-        <!-- Row 4 -->
-        <StackPanel Orientation="Horizontal"
-                    Grid.Column="2" Grid.Row="4"
+                    Grid.Column="1" Grid.Row="3"
                     Margin="20 0 0 0">
             <Label  Content="Source" />
             <StackPanel Orientation="Vertical"
                         Margin="55 0 0 0">
                 <RadioButton Content="In-house"
                              x:Name="rbInHouse"
-                             IsChecked="True"/>
+                             IsChecked="{Binding IsInHousePart, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                 <RadioButton Content="Outsourced"
                              Margin="0 10 0 10"
                              x:Name="rbOutsourced"/>
@@ -152,7 +92,7 @@
 
         <!-- Row 5 -->
         <StackPanel Orientation="Horizontal"
-                    Grid.Column="2" Grid.Row="5"
+                    Grid.Column="1" Grid.Row="4"
                     Margin="20 0 0 0">
             <Label  Content="Part ID" />
             <TextBox Width="100" Height="20" 
@@ -163,7 +103,7 @@
         
         <!-- Row 6 -->
         <StackPanel Orientation="Horizontal"
-                    Grid.Column="2" Grid.Row="6"
+                    Grid.Column="1" Grid.Row="5"
                     Margin="20 0 0 0">
             <Label HorizontalAlignment="Left" Content="Name" />
             <TextBox
@@ -174,50 +114,58 @@
 
         <!-- Row 7 -->
         <StackPanel Orientation="Horizontal"
-                    Grid.Column="2" Grid.Row="7">
-            <Label Grid.Column="5" Grid.Row="6" Grid.RowSpan="1" Margin="20 0 0 0" Content="Inventory" />
+                    Grid.Column="1" Grid.Row="6">
+            <Label Margin="20 0 0 0" Content="Inventory" />
             <TextBox
                  Width="100" Height="20"
                  Margin="41 0 0 0"
-                 Text="{Binding ProductInventory, UpdateSourceTrigger=PropertyChanged}"/>
+                 PreviewTextInput="PreviewIntInput"
+                 DataObject.Pasting="TextBox_IntPasting"
+                 Text="{Binding PartInventory, UpdateSourceTrigger=PropertyChanged}"/>
         </StackPanel>
 
         <!-- Row 8 -->
         <StackPanel Orientation="Horizontal"
-                    Grid.Column="2" Grid.Row="8"
+                    Grid.Column="1" Grid.Row="7"
                     Margin="20 0 0 0">
             <Label Content="Price" />
             <TextBox
                  Width="100" Height="20"
                  Margin="65 0 0 0"
-                 Text="{Binding ProductPrice, StringFormat={}{0:C}, UpdateSourceTrigger=PropertyChanged}"/>
+                 PreviewTextInput="PreviewPriceInput"
+                 DataObject.Pasting="TextBox_PricePasting"
+                 Text="{Binding PartPrice, StringFormat={}{0:C}, UpdateSourceTrigger=PropertyChanged}"/>
         </StackPanel>
 
         <!-- Row 9 -->
         <StackPanel Orientation="Horizontal"
-                    Grid.Column="2" Grid.Row="9"
+                    Grid.Column="1" Grid.Row="8"
                     Margin="20 0 0 0">
             <Label Content="Min" />
             <TextBox
                  Width="100" Height="20"
-                 Margin="70 0 0 0"
-                 Text="{Binding ProductMin, UpdateSourceTrigger=PropertyChanged}"/>
+                 Margin="71 0 0 0"
+                 PreviewTextInput="PreviewIntInput"
+                 DataObject.Pasting="TextBox_IntPasting"
+                 Text="{Binding PartMin, UpdateSourceTrigger=PropertyChanged}"/>
         </StackPanel>
 
         <!-- Row 10 -->
         <StackPanel Orientation="Horizontal"
-                    Grid.Column="2" Grid.Row="10"
+                    Grid.Column="1" Grid.Row="9"
                     Margin="20 0 0 0">
             <Label Content="Max" />
             <TextBox
                  Width="100" Height="20"
-                 Margin="68 0 0 0"
-                 Text="{Binding ProductMax, UpdateSourceTrigger=PropertyChanged}"/>
+                 Margin="69 0 0 0"
+                 PreviewTextInput="PreviewIntInput"
+                 DataObject.Pasting="TextBox_IntPasting"
+                 Text="{Binding PartMax, UpdateSourceTrigger=PropertyChanged}"/>
         </StackPanel>
 
         <!-- Row 11 -->
         <StackPanel Orientation="Horizontal"
-                    Grid.Column="2" Grid.Row="11"
+                    Grid.Column="1" Grid.Row="10"
                     Margin="20 0 0 0">
             <Grid>
                 <Label Content="Company Name">
@@ -250,13 +198,15 @@
                 <TextBox
                     Width="100" Height="20"
                     Margin="5 0 0 0"
+                    PreviewTextInput="PreviewIntInput"
+                    DataObject.Pasting="TextBox_IntPasting"
                     Text="{Binding MachineID, UpdateSourceTrigger=PropertyChanged}">
 
                     <TextBox.Style>
                         <Style TargetType="TextBox">
                             <Setter Property="Visibility" Value="Hidden"/>
                             <Style.Triggers>
-                                <DataTrigger Binding="{Binding ElementName=rbOutsourced, Path=IsChecked}" Value="True">
+                                <DataTrigger Binding="{Binding ElementName=rbInHouse, Path=IsChecked}" Value="True">
                                     <Setter Property="Visibility" Value="Visible"/>
                                 </DataTrigger>
                             </Style.Triggers>
@@ -273,7 +223,7 @@
                         <Style TargetType="TextBox">
                             <Setter Property="Visibility" Value="Hidden"/>
                             <Style.Triggers>
-                                <DataTrigger Binding="{Binding ElementName=rbInHouse, Path=IsChecked}" Value="True">
+                                <DataTrigger Binding="{Binding ElementName=rbOutsourced, Path=IsChecked}" Value="True">
                                     <Setter Property="Visibility" Value="Visible"/>
                                 </DataTrigger>
                             </Style.Triggers>
@@ -287,10 +237,10 @@
         <!-- Row 12 -->
 
         <StackPanel Orientation="Horizontal" 
-                    Grid.Column="2"
-                    Grid.Row="12"
+                    Grid.Column="1"
+                    Grid.Row="11"
                     Margin="0 5"
-                    HorizontalAlignment="Right">
+                    HorizontalAlignment="Center">
             <Button
                 Padding="5"
                 Margin="5 0 0 0"
