--- a/App.xaml
+++ b/App.xaml
@@ -3,6 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:views="clr-namespace:InventoryManager.Views"
              xmlns:viewmodels="clr-namespace:InventoryManager.ViewModels"
-             xmlns:local="clr-namespace:InventoryManager"
+             xmlns:local="clr-namespace:InventoryManager" 
+             xmlns:local1="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              StartupUri="MainWindow.xaml">
+    <Application.Resources>
+        <local1:BooleanToVisibilityConverter x:Key="BooleanConverter"/>
+    </Application.Resources>
 </Application>
