--- a/Views/AddPartView.xaml
+++ b/Views/AddPartView.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:InventoryManager.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="400">
-    
+
     <Grid>
         <Grid.Resources>
             <Style TargetType="{x:Type TextBox}">
@@ -86,7 +86,8 @@
                              IsChecked="{Binding IsInHousePart, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                 <RadioButton Content="Outsourced"
                              Margin="0 10 0 10"
-                             x:Name="rbOutsourced"/>
+                             x:Name="rbOutsourced"
+                             IsChecked="{Binding IsOutsourcedPart, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
             </StackPanel>
         </StackPanel>
 
@@ -168,68 +169,27 @@
                     Grid.Column="1" Grid.Row="10"
                     Margin="20 0 0 0">
             <Grid>
-                <Label Content="Company Name">
-                    <Label.Style>
-                        <Style TargetType="Label">
-                            <Setter Property="Visibility" Value="Hidden"/>
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding ElementName=rbOutsourced, Path=IsChecked}" Value="True">
-                                    <Setter Property="Visibility" Value="Visible"/>
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </Label.Style>
-                </Label>
-                <Label Content="Machine ID">
-                    <Label.Style>
-                        <Style TargetType="Label">
-                            <Setter Property="Visibility" Value="Hidden"/>
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding ElementName=rbInHouse, Path=IsChecked}" Value="True">
-                                    <Setter Property="Visibility" Value="Visible"/>
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </Label.Style>
-                </Label>
+                <Label Content="Company Name"
+                       Visibility="{Binding ElementName=rbOutsourced, Path=IsChecked, Converter={StaticResource BooleanConverter}}"/>
+
+                <Label Content="Machine ID"
+                       Visibility="{Binding ElementName=rbInHouse, Path=IsChecked, Converter={StaticResource BooleanConverter}}"/>
             </Grid>
             
             <Grid>
                 <TextBox
                     Width="100" Height="20"
-                    Margin="5 0 0 0"
+                    Margin="31,3,0,3"
                     PreviewTextInput="PreviewIntInput"
                     DataObject.Pasting="TextBox_IntPasting"
-                    Text="{Binding MachineID, UpdateSourceTrigger=PropertyChanged}">
+                    Text="{Binding MachineID, UpdateSourceTrigger=PropertyChanged}"
+                    Visibility="{Binding ElementName=rbInHouse, Path=IsChecked, Converter={StaticResource BooleanConverter}}"/>
 
-                    <TextBox.Style>
-                        <Style TargetType="TextBox">
-                            <Setter Property="Visibility" Value="Hidden"/>
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding ElementName=rbInHouse, Path=IsChecked}" Value="True">
-                                    <Setter Property="Visibility" Value="Visible"/>
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </TextBox.Style>
-                </TextBox>
-                
                 <TextBox
                     Width="100" Height="20"
-                    Margin="5 0 0 0"
-                    Text="{Binding CompanyName, UpdateSourceTrigger=PropertyChanged}">
-
-                    <TextBox.Style>
-                        <Style TargetType="TextBox">
-                            <Setter Property="Visibility" Value="Hidden"/>
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding ElementName=rbOutsourced, Path=IsChecked}" Value="True">
-                                    <Setter Property="Visibility" Value="Visible"/>
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </TextBox.Style>
-                </TextBox>
+                    Margin="5,3,0,3"
+                    Text="{Binding CompanyName, UpdateSourceTrigger=PropertyChanged}"
+                    Visibility="{Binding ElementName=rbOutsourced, Path=IsChecked, Converter={StaticResource BooleanConverter}}"/>
             </Grid>
             
         </StackPanel>
@@ -251,6 +211,7 @@
                 Padding="5"
                 Margin="5 0 0 0"
                 Content="Save"
+                IsEnabled="{Binding EnableSave}"
                 Command="{Binding SaveNewPartCommand}"/>
         </StackPanel>
     </Grid>
